--- a/main1.css
+++ b/main1.css
@@ -3,7 +3,7 @@ body {
     margin-right: auto;
     max-width: 1920px;
     padding: 0px 0px;
-    background:rgb(82, 20, 20);
+    background:#fff;
     font-family: 'Montserrat', sans-serif;
 
 }
